<resources>
	<string name="app_name">LookieLoo</string>
	<string name="create_loo">Create a Loo</string>
	<string name="filter_loos">Filter Loos</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="clean">Clean</string>
    <string name="handicap_accessible">handicap accessible</string>
    <string name="accessible">Accessible</string>
    <string name="public_filter">Public</string>
    <string name="mixed_gender">Shared</string>
    <string name="baby_friendly">Baby Friendly</string>
    <string name="shared">Shared</string>
    <string name="air_dryer">Air Dryer</string>
    <string name="good_lighting">Good lighting</string>
    <string name="found_a_loo_that_we_haven_t">Found a Loo that we haven\'t?</string>
    <string name="add_it_here">add loo</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="describe_the_loo">Describe the Loo</string>
    <string name="create">Create</string>
    <string name="cancel">cancel</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="report">Report</string>


    <string name="create_action_btn_text">Finish</string>
    <string name="select_location_btn_text">Select Location</string>


    <string name="loo_carousel_id">filterCarousel</string>


    <string name="report_prompt">What\'s wrong with this loo?</string>
    <string name="report_thanks">Thanks for the report!</string>
    <array name="report_reasons">
        <item>Inappropriate language</item>
        <item>Inaccurate Location</item>
        <item>Inaccurate Filters</item>
        <item>No longer available</item>
        <item>Other</item>
    </array>


</resources>
